--- a/Gentse Feesten 2013/#GF13-Info.plist
+++ b/Gentse Feesten 2013/#GF13-Info.plist
@@ -17,6 +17,8 @@
 				<string>icon.png</string>
 				<string>icon@2x.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -40,6 +42,8 @@
 		<string>PTN57F.ttf</string>
 		<string>PTN77F.ttf</string>
 	</array>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
